Added flexbox and CSS Grid layouts for both cities and About section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <nav>
         <ul>
           <li><a href="#cassadaga">Cassadaga</a></li>
+
           <li><a href="#lake-helen">Lake Helen</a></li>
         </ul>
       </nav>
@@ -34,17 +35,275 @@
 
   <main>
 
-    <section>
+    <section class="hero-home">
     </section>
 
-    <section>
+    <section class="cassadaga-thumbnails">
+    <h2>Cassadaga Parks</h2>
+    <div class="layout">
+    </div>  <!-- layout div -->
     </section>
+    <div class="layout">
+    <div class="thumbnails">
+      <a href="/page" class="thumbnail-wrapper">
+    <div class="park-details">
+      <p>Park 1</p>
+      <p>Park description. I'm baby bespoke enamel pin lo-fi microdosing,
+        keffiyeh hell of vaporware williamsburg VHS put a bird on it austin
+        activated charcoal franzen craft beer iPhone.</p>
+    </div>  <!-- park details div -->
+    <img class="park-thumbnail"
+    src="img/park.jpg"
+    alt="park alt"
+    />
+    </a> <!-- subpage link -->
+    </div>  <!-- thumnails div -->
+    <div class="layout">
+    <div class="thumbnails">
+      <a href="/page" class="thumbnail-wrapper">
+    <div class="park-details">
+      <p>Park 1</p>
+      <p>Park description. I'm baby bespoke enamel pin lo-fi microdosing,
+        keffiyeh hell of vaporware williamsburg VHS put a bird on it austin
+        activated charcoal franzen craft beer iPhone.</p>
+    </div>  <!-- park details div -->
+    <img class="park-thumbnail"
+    src="img/park.jpg"
+    alt="park alt"
+    />
+    </a> <!-- subpage link -->
+    </div>  <!-- thumnails div -->
+    <div class="layout">
+    <div class="thumbnails">
+      <a href="/page" class="thumbnail-wrapper">
+    <div class="park-details">
+      <p>Park 1</p>
+      <p>Park description. I'm baby bespoke enamel pin lo-fi microdosing,
+        keffiyeh hell of vaporware williamsburg VHS put a bird on it austin
+        activated charcoal franzen craft beer iPhone.</p>
+    </div>  <!-- park details div -->
+    <img class="park-thumbnail"
+    src="img/park.jpg"
+    alt="park alt"
+    />
+    </a> <!-- subpage link -->
+    </div>  <!-- thumnails div -->
+    <div class="layout">
+    <div class="thumbnails">
+      <a href="/page" class="thumbnail-wrapper">
+    <div class="park-details">
+      <p>Park 1</p>
+      <p>Park description. I'm baby bespoke enamel pin lo-fi microdosing,
+        keffiyeh hell of vaporware williamsburg VHS put a bird on it austin
+        activated charcoal franzen craft beer iPhone.</p>
+    </div>  <!-- park details div -->
+    <img class="park-thumbnail"
+    src="img/park.jpg"
+    alt="park alt"
+    />
+    </a> <!-- subpage link -->
+    </div>  <!-- thumnails div -->
+    <div class="layout">
+    <div class="thumbnails">
+      <a href="/page" class="thumbnail-wrapper">
+    <div class="park-details">
+      <p>Park 1</p>
+      <p>Park description. I'm baby bespoke enamel pin lo-fi microdosing,
+        keffiyeh hell of vaporware williamsburg VHS put a bird on it austin
+        activated charcoal franzen craft beer iPhone.</p>
+    </div>  <!-- park details div -->
+    <img class="park-thumbnail"
+    src="img/park.jpg"
+    alt="park alt"
+    />
+    </a> <!-- subpage link -->
+    </div>  <!-- thumnails div -->
+    <div class="layout">
+    <div class="thumbnails">
+      <a href="/page" class="thumbnail-wrapper">
+    <div class="park-details">
+      <p>Park 1</p>
+      <p>Park description. I'm baby bespoke enamel pin lo-fi microdosing,
+        keffiyeh hell of vaporware williamsburg VHS put a bird on it austin
+        activated charcoal franzen craft beer iPhone.</p>
+    </div>  <!-- park details div -->
+    <img class="park-thumbnail"
+    src="img/park.jpg"
+    alt="park alt"
+    />
+    </a> <!-- subpage link -->
+    </div>  <!-- thumnails div -->
+    <div class="layout">
+    <div class="thumbnails">
+      <a href="/page" class="thumbnail-wrapper">
+    <div class="park-details">
+      <p>Park 1</p>
+      <p>Park description. I'm baby bespoke enamel pin lo-fi microdosing,
+        keffiyeh hell of vaporware williamsburg VHS put a bird on it austin
+        activated charcoal franzen craft beer iPhone.</p>
+    </div>  <!-- park details div -->
+    <img class="park-thumbnail"
+    src="img/park.jpg"
+    alt="park alt"
+    />
+    </a> <!-- subpage link -->
+    </div>  <!-- thumnails div -->
+    <div class="layout">
+    <div class="thumbnails">
+      <a href="/page" class="thumbnail-wrapper">
+    <div class="park-details">
+      <p>Park 1</p>
+      <p>Park description. I'm baby bespoke enamel pin lo-fi microdosing,
+        keffiyeh hell of vaporware williamsburg VHS put a bird on it austin
+        activated charcoal franzen craft beer iPhone.</p>
+    </div>  <!-- park details div -->
+    <img class="park-thumbnail"
+    src="img/park.jpg"
+    alt="park alt"
+    />
+    </a> <!-- subpage link -->
+    </div>  <!-- thumnails div -->
+  </div>  <!-- layout div Cassadaga -->
+</section> <!-- section Cassadaga thumbnails -->
 
-    <section>
-    </section>
+    <section class="lake-helen-thumbnails">
+    <h2>Lake Helen Parks</h2>
 
-    <section>
-    </section>
+    <div class="layout">
+    <div class="thumbnails">
+      <a href="/page" class="thumbnail-wrapper">
+    <div class="park-details">
+      <p>Park 1</p>
+      <p>Park description. I'm baby bespoke enamel pin lo-fi microdosing,
+        keffiyeh hell of vaporware williamsburg VHS put a bird on it austin
+        activated charcoal franzen craft beer iPhone.</p>
+    </div>  <!-- park details div -->
+    <img class="park-thumbnail"
+    src="img/park.jpg"
+    alt="park alt"
+    />
+  </a> <!-- subpage link -->
+    </div>  <!-- thumnails div -->
+    <div class="layout">
+    <div class="thumbnails">
+      <a href="/page" class="thumbnail-wrapper">
+    <div class="park-details">
+      <p>Park 1</p>
+      <p>Park description. I'm baby bespoke enamel pin lo-fi microdosing,
+        keffiyeh hell of vaporware williamsburg VHS put a bird on it austin
+        activated charcoal franzen craft beer iPhone.</p>
+    </div>  <!-- park details div -->
+    <img class="park-thumbnail"
+    src="img/park.jpg"
+    alt="park alt"
+    />
+  </a> <!-- subpage link -->
+    </div>  <!-- thumnails div -->
+    <div class="layout">
+    <div class="thumbnails">
+      <a href="/page" class="thumbnail-wrapper">
+    <div class="park-details">
+      <p>Park 1</p>
+      <p>Park description. I'm baby bespoke enamel pin lo-fi microdosing,
+        keffiyeh hell of vaporware williamsburg VHS put a bird on it austin
+        activated charcoal franzen craft beer iPhone.</p>
+    </div>  <!-- park details div -->
+    <img class="park-thumbnail"
+    src="img/park.jpg"
+    alt="park alt"
+    />
+  </a> <!-- subpage link -->
+    </div>  <!-- thumnails div -->
+    <div class="layout">
+    <div class="thumbnails">
+      <a href="/page" class="thumbnail-wrapper">
+    <div class="park-details">
+      <p>Park 1</p>
+      <p>Park description. I'm baby bespoke enamel pin lo-fi microdosing,
+        keffiyeh hell of vaporware williamsburg VHS put a bird on it austin
+        activated charcoal franzen craft beer iPhone.</p>
+    </div>  <!-- park details div -->
+    <img class="park-thumbnail"
+    src="img/park.jpg"
+    alt="park alt"
+    />
+  </a> <!-- subpage link -->
+    </div>  <!-- thumnails div -->
+    <div class="layout">
+    <div class="thumbnails">
+      <a href="/page" class="thumbnail-wrapper">
+    <div class="park-details">
+      <p>Park 1</p>
+      <p>Park description. I'm baby bespoke enamel pin lo-fi microdosing,
+        keffiyeh hell of vaporware williamsburg VHS put a bird on it austin
+        activated charcoal franzen craft beer iPhone.</p>
+    </div>  <!-- park details div -->
+    <img class="park-thumbnail"
+    src="img/park.jpg"
+    alt="park alt"
+    />
+  </a> <!-- subpage link -->
+    </div>  <!-- thumnails div -->
+    <div class="layout">
+    <div class="thumbnails">
+      <a href="/page" class="thumbnail-wrapper">
+    <div class="park-details">
+      <p>Park 1</p>
+      <p>Park description. I'm baby bespoke enamel pin lo-fi microdosing,
+        keffiyeh hell of vaporware williamsburg VHS put a bird on it austin
+        activated charcoal franzen craft beer iPhone.</p>
+    </div>  <!-- park details div -->
+    <img class="park-thumbnail"
+    src="img/park.jpg"
+    alt="park alt"
+    />
+  </a> <!-- subpage link -->
+    </div>  <!-- thumnails div -->
+    <div class="layout">
+    <div class="thumbnails">
+      <a href="/page" class="thumbnail-wrapper">
+    <div class="park-details">
+      <p>Park 1</p>
+      <p>Park description. I'm baby bespoke enamel pin lo-fi microdosing,
+        keffiyeh hell of vaporware williamsburg VHS put a bird on it austin
+        activated charcoal franzen craft beer iPhone.</p>
+    </div>  <!-- park details div -->
+    <img class="park-thumbnail"
+    src="img/park.jpg"
+    alt="park alt"
+    />
+  </a> <!-- subpage link -->
+    </div>  <!-- thumnails div -->
+    <div class="layout">
+    <div class="thumbnails">
+      <a href="/page" class="thumbnail-wrapper">
+    <div class="park-details">
+      <p>Park 1</p>
+      <p>Park description. I'm baby bespoke enamel pin lo-fi microdosing,
+        keffiyeh hell of vaporware williamsburg VHS put a bird on it austin
+        activated charcoal franzen craft beer iPhone.</p>
+    </div>  <!-- park details div -->
+    <img class="park-thumbnail"
+    src="img/park.jpg"
+    alt="park alt"
+    />
+  </a> <!-- subpage link -->
+    </div>  <!-- thumnails div -->
+  </div>  <!-- layout div Lake Helen -->
+</section> <!-- section thumbnails Lake Helen -->
+
+    <section class="about">
+      <div class="about-site">
+        <h3>About the Site</h3>
+        <p>About stuff. I'm baby bespoke enamel pin lo-fi microdosing,
+          keffiyeh hell of vaporware williamsburg VHS put a bird on it austin
+          activated charcoal franzen craft beer iPhone.</p>
+        <img class="park-thumbnail"
+        src="img/nichole-skillcrush-student-comm.png"
+        alt="nichole alt"
+        />
+      </div> <!-- About div -->
+    </section> <!-- section About -->
 
   </main> <!-- main wrapper -->
 
